# vectormap_editor

./: .gitignore  README.md  mobility_park_test.osm  planning.doc  pyproject.toml
examples/: sample_map.xml
scripts/: checker.py  fitter.py
tests/: test_xml_io.py
vector_map_editor/: main.py
vector_map_editor/app/: main_window.py
vector_map_editor/canvas/: map_canvas.py
vector_map_editor/io/: __init__.py  xml_io.py
vector_map_editor/model/: __init__.py  coordinates.py  enums.py  geometry.py  map_data.py  validators.py
vector_map_editor/tools/: __init__.py  white_pixel_assist.py
